Fix spacing on pictures on restaurant show page

--- a/app/assets/stylesheets/components/restaurant_show/restaurant_show.scss
+++ b/app/assets/stylesheets/components/restaurant_show/restaurant_show.scss
@@ -83,7 +83,7 @@
 .photo-highlights {
   display: flex;
   align-items: center;
-  margin: 20px 0;
+  margin: 25px 0;
 }
 
 .img-default {
